# near-stream

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: docker.yml
src/: index.html  ingest.rs  lib.rs  main.rs  redis_stream.rs  stream.rs  types.rs
tests/: ingest_integration_test.rs
