[package]
name = "near-sse"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.11.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio = "1.48.0"
futures = "0.3.31"
futures-util = "0.3.31"
serde_json = "1.0.145"
anyhow = "1.0.100"
reqwest = { version = "0.12.24", features = ["json"] }
log = "0.4"
env_logger = "0.10"
