[package]
name = "near-stream"
version = "0.1.0"
edition = "2021"

[lib]
name = "near_stream"
path = "src/lib.rs"

[[bin]]
name = "near-stream"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6", features = ["trace"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
anyhow = "1.0.100"
reqwest = { version = "0.12.24", features = ["json"] }
reqwest-middleware = "0.3"
reqwest-retry = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
futures = "0.3.31"
redis = { version = "0.32", features = ["tokio-comp", "connection-manager", "streams"] }

[dev-dependencies]
wiremock = "0.5"
